src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__acos.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc()]\nfn acos(a: f64) -> Result<f64, EvalError> {\n    if a < -1.0 || 1.0 < a {\n        return Err(\n            EvalError::OutOfDomain(\n                DomainLimit::Inclusive(-1),\n                DomainLimit::Inclusive(1),\n                \"acos\".into(),\n            ),\n        );\n    }\n    Ok(a.acos())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Acos;
impl crate::func::EagerUnaryFunc for Acos {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        acos(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Acos {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(acos))
    }
}
fn acos(a: f64) -> Result<f64, EvalError> {
    if a < -1.0 || 1.0 < a {
        return Err(
            EvalError::OutOfDomain(
                DomainLimit::Inclusive(-1),
                DomainLimit::Inclusive(1),
                "acos".into(),
            ),
        );
    }
    Ok(a.acos())
}
